--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "iconv-lite": "^0.4.15",
     "pg": "^6.1.2",
     "pg-promise": "^5.5.1",
     "shelljs": "^0.7.6"
